[project]
name = "positionport"
version = "0.1.0"
description = "A position risk and portfolio analytics library"
authors = [{ name = "Your Name", email = "your@email.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/yourname/positionport"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"